src/styles/blocks/nav.scss
.nav {
  position: relative;
  z-index: 2;

  &__list {
    display: flex;
    margin: 0;
    padding: 0;
    list-style: none;
  }

  &__link {
    padding: 52px 24px;
    letter-spacing: $letter-spacing;
    line-height: $text-size-small;
    font-family: Poppins, sans-serif;
    font-weight: $text-bold;
    font-size: $text-size-small;
    text-decoration: none;
    color: $c-white;
    text-transform: uppercase;

    &:visited {
      color: rgba(129, 6, 123, 0.98);
    }

    &:hover {
      color: rgb(97, 50, 184);
    }
  }

  @media (max-width: 1023px) {
    & {
      position: absolute;
      top: $header-height;
      left: 0;
      display: none;
      height: 100vh;
      width: 100%;
      z-index: 1;
    }

    &__list {
      flex-direction: column;
      height: 100vh;
      width: 100%;
    }

    &__item {
      display: block;
      width: 100%;
    }

    &__link {
      display: flex;
      justify-content: center;
      height: 25vh;
      width: 100%;
      background-color: $c-blue;
    }
  }
}

